[gd_scene load_steps=5 format=2]

[ext_resource path="res://PlaceHolderAssets/WestwickAssets/Sprites/Apple.png" type="Texture" id=1]
[ext_resource path="res://World/ItemInteraction/ItemPickup.gd" type="Script" id=2]
[ext_resource path="res://Other/OutliveParent.tscn" type="PackedScene" id=3]
[ext_resource path="res://PlaceHolderAssets/WestwickAssets/MuiscAndSounds/a_item_pickup.wav" type="AudioStream" id=4]

[node name="ItemPickup" type="StaticBody2D"]
collision_layer = 9
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -2 )
texture = ExtResource( 1 )
__meta__ = {
"_editor_description_": ""
}

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -6, 4, -6, -4, -4, -6, 4, -6, 6, -4, 6, 4, 4, 6, -4, 6 )
__meta__ = {
"_editor_description_": ""
}

[node name="OutliveParent" parent="." instance=ExtResource( 3 )]

[node name="PickupSound" type="AudioStreamPlayer" parent="OutliveParent"]
pause_mode = 2
stream = ExtResource( 4 )
bus = "Sounds"

[connection signal="finished" from="OutliveParent/PickupSound" to="OutliveParent" method="queue_free"]
